# knowledge-lora

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  install_vllm.sh  push_to_hub.sh  pyproject.toml  requirements.txt  run_pipeline.sh  train_cpt.sh  train_sft.sh
.github/workflows/: ci.yml
configs/: cpt_config.yaml  sft_config.yaml
scripts/: 01_download_wiki.py  02_extract_wiki.py  03_extract_pdfs.py  04_extract_markdown.py  05_clean_deduplicate.py  06_tokenize.py  07_create_sft_data.py  08_generate_qa_llm.py  patch_vllm_verneed_hash.py  patch_wikiextractor.py  smoke_test.py
