[project]
name = "knowledge-lora"
version = "0.1.0"
description = "LoRA adapter for Ministral-3-14B trained on Wikipedia and custom documents"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific
]
ignore = [
    "S603",  # subprocess with list args is safe
    "S607",  # partial executable path (sys.executable is fine)
    "S101",  # assert in non-test code (used for validation)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["N999"]   # allow script-style module names

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
